# Prompting-using-ChatGPT

./: Prompting-00.ipynb  README.md  automated-reply-to-customer-emails.ipynb  config.py  customize-chatbot.ipynb  inferring-prompts.ipynb  iterative-prompt.ipynb  prompting-guideline.ipynb  pyproject.toml  summarize-text.ipynb  transforming-text.ipynb
