[tool.poetry]
name = "abc"
version = "0.1.0"
description = ""
authors = ["Saravanakumar Gopalakrishnan"]

[tool.poetry.dependencies]
python = ">=3.8"
openai = "^0.27.6"
ipykernel = "^6.22.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
